...
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:layout_marginTop="10dp"
                android:text="Project Name" />

            <EditText
                android:id="@+id/txt_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_backg"
                android:ems="10"
                android:hint="Project Name"
                android:inputType="textPersonName"
...
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:layout_marginTop="10dp"
                android:text="Project Description" />

            <EditText
                android:id="@+id/txt_project_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_backg"
                android:ems="10"
                android:hint="Description"
                android:inputType="textMultiLine"
...
                    android:layout_gravity="center"
                    android:layout_weight="200"
                    android:text="No Due Date Selected"
                    android:textSize="20dp" />

                <ImageButton
                    android:id="@+id/btnProjectDateSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_1"
                    android:tint="@color/color_white"
                    android:src="@drawable/ic_baseline_calendar_today_24"
...
                android:fontFamily="sans-serif"
                android:text="@string/taskStages"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/group1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
...
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_palette_24" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/group3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:orientation="vertical">

                <LinearLayout
...
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_white"
                        android:layout_weight="100"
                        android:text="Task Stage 3" />

                    <CheckBox
                        android:id="@+id/checkboxStage3"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/color_white"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true" />
                </LinearLayout>
...
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_palette_24" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/group6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:orientation="vertical">

                <LinearLayout
...
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_palette_24" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btnSaveStages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_1"
                    android:textColor="@color/color_white"
                    android:text="Done" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
