...
                    android:layout_height="wrap_content"

                    android:text="Task Name "
                    android:textColor="@color/color_white" />

                <EditText
                    android:id="@+id/txtTaskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_backg"
                    android:ems="10"

...
                    android:layout_marginTop="24dp"

                    android:text="Task Description "
                    android:textColor="@color/color_white" />

                <EditText
                    android:id="@+id/txtTaskDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_backg"
                    android:ems="10"

...
                    android:layout_marginTop="24dp"

                    android:text="Add Task To Stage:"
                    android:textColor="@color/color_white" />

                <Spinner
                    android:id="@+id/spinnerStage"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner_des" />

                <TextView
...

                    android:layout_marginTop="24dp"
                    android:text="Assignee"
                    android:textColor="@color/color_white" />

                <Spinner
                    android:id="@+id/spinnerAssignee"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner_des" />

                <TextView
...
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAddTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_1"
                        android:text="Add Task"
                        android:textColor="@color/color_white" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
...
