...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".fragments.ProjectListFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefreshProjects"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/projectsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/content_layout_backg"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:itemCount="2"
...
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:backgroundTint="@color/color_1"
        android:tint="@color/color_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_float_plus_45"/>

    <TextView
        android:id="@+id/txtEmpty_projects"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="No projects yet. Why not create one? :)"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:layout_margin="20dp"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/swiperefreshProjects"
        app:layout_constraintEnd_toEndOf="parent"
...
